# lightgbm-rs

./: .gitignore  .gitmodules  Cargo.toml  Justfile  README.md  build.rs
.github/workflows/: ci.yml
benches/: simple_bench.rs
examples/: iris.rs  test.rs
src/: bindings.rs  errors.rs  fast_config.rs  lib.rs  sys.rs
src/includes/: c_api.hpp
tests/: iris.model  test_simple.rs
